--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         "network": true,
                         "system": "",
                         "withoutContext": false,
-                        "stream": true
+                        "stream": false
                     })
                 });
                 const data = await response.json();
