--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         "network": true,
                         "system": "",
                         "withoutContext": false,
-                        "stream": true
+                        "stream": false
                     })
                 });
                  const data = await response.json();
